# qml-material

./: .builder.yml  .gitignore  .qmake.conf  .travis.yml  Action.qml  ActionBar.qml  Application.qml  AwesomeIcon.qml  BACKERS.md  Button.qml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Card.qml  CardPage.qml  Dialog.qml  Icon.qml  IconAction.qml  Ink.qml  Label.qml  MainView.qml  NavigationDrawer.qml  Object.qml  Page.qml  PageApplication.qml  PageStack.qml  ProgressBar.qml  README.md  Scrollbar.qml  Sidebar.qml  Snackbar.qml  TabView.qml  Tabs.qml  TextField.qml  TextInput.qml  Theme.qml  ThinDivider.qml  Toolbar.qml  View.qml  Wave.qml  (+89 more)
ListItems/: BaseListItem.qml  Header.qml  Standard.qml  Subtitled.qml  qmldir
Material/: CardPage.qml  PageStack.qml  Sidebar.qml  TextField.qml
Material/ListItems/: Standard.qml
Transitions/: CardSlideTransition.qml  CardTransition.qml  ExpandTransition.qml  PageTransition.qml  qmldir
assets/fonts/: fonts.qrc
assets/icons/: icons.qrc
core/: theme.cpp  theme.h  units.cpp  units.h
css/: main.css  main.less
decorations/material/: main.cpp  material.json  material.pro
demo/: BottomSheetDemo.qml  ButtonDemo.qml  CMakeLists.txt  CheckBoxDemo.qml  CheckboxDemo.qml  ColorPaletteDemo.qml  CustomIconsDemo.qml  DatePickerDemo.qml  DialogDemo.qml  FormsDemo.qml  FullScreenDialogDemo.qml  GridListDemo.qml  IconDemo.qml  IconsDemo.qml  ListItemsDemo.qml  NGActionBar.qml  NGApplicationWindow.qml  NGButton.qml  NGPage.qml  NGPageStack.qml  NGToolbar.qml  PageStackDemo.qml  ProgressBarDemo.qml  RadioButtonDemo.qml  SidebarPage.qml  SliderDemo.qml  SubPage.qml  SubSubPage.qml  SwitchDemo.qml  TextFieldDemo.qml  TimePickerDemo.qml  TypographyDemo.qml  demo.pro  demo.qmlproject  demo.qrc  icons.yml  main.cpp  main.qml  qml.qrc
demo/icons/: core_icons.qrc  icons.qrc
documentation/: material.qdoc  material.qdocconf
examples/: button.qml
examples/demo/: SubPage.qml  main.qml
fonts/: MaterialFontLoader.qml  fonts.qrc  qmldir
icons/: core_icons.qrc  icons.qrc  resources.qrc
js/: utils.js
modules/: CMakeLists.txt  FontAwesome.qrc  FontRoboto.qrc  Icons.qrc  Material.qrc  MaterialQtQuick.qrc
modules/Material/: Action.qml  ActionBar.qml  ActionButton.qml  AppTheme.qml  Application.qml  ApplicationWindow.qml  AwesomeIcon.qml  BottomActionSheet.qml  BottomSheet.qml  Button.qml  CMakeLists.txt  Card.qml  CardPage.qml  CheckBox.qml  Checkbox.qml  DatePicker.qml  DatePickerDialog.qml  Device.qml  Dialog.qml  DialogBase.qml  Dropdown.qml  FullScreenDialog.qml  GridList.qml  Icon.qml  IconAction.qml  IconButton.qml  Ink.qml  InputDialog.qml  Label.qml  MainView.qml  Makefile  Material.pro  MaterialAnimation.qml  MenuActionButton.qml  MenuField.qml  NavigationDrawer.qml  NavigationDrawerPage.qml  Object.qml  OverlayLayer.qml  OverlayView.qml  (+46 more)
modules/Material/Extras/: AutomaticGrid.qml  CMakeLists.txt  CircleImage.qml  CircleMask.qml  ColumnFlow.qml  Document.qml  Extras.pro  Image.qml  Object.qml  qmldir
modules/Material/Extras/js/: dateutils.js  httplib.js  listutils.js  promises.js  utils.js
modules/Material/ListItems/: BaseListItem.qml  CMakeLists.txt  Divider.qml  Header.qml  SectionHeader.qml  SimpleMenu.qml  Standard.qml  Subheader.qml  Subtitled.qml  qmldir
modules/Material/Tiles/: TitleTile.qml  qmldir
modules/Material/Transitions/: CardTransition.qml  PageTransition.qml
modules/Material/icons/: main.sh
modules/Material/styles/: gtkstyle.cpp  gtkstyle.h  style.cpp  style.h
plugins/: materialiconprovider.cpp  plugins.pro
qml/: Application.qml  Application2.qml  AwesomeIcon.qml  Label.qml  ProgressBar.qml  View.qml  Wave.qml  qml.qrc
qml/Transitions/: PageTransition.qml
scripts/: deploy.sh  generate_qt_resources.sh  icons.py  make_awesome.py  make_icons.sh  normalize_imports.sh  qrc.py
src/: ActionBar.qml  AwesomeIcon.qml  Wave.qml  material.qrc  plugin.cpp  plugin.h  qmldir  src.pro
src/ListItems/: BaseListItem.qml
styles_demo/: Makefile  main.qml
tests/: CMakeLists.txt  icons.yml  qml-materials.qml  tests.cpp  tests.pro  tst_actionbar.qml  tst_card.qml  tst_document.qml  tst_httplib.qml  tst_material  tst_pagestack.qml  tst_promise.qml
tests/icons/: icons.qrc
(+124 files in other folders)
